add iohistory domain
