# domains/io_history/dto/create_io-history.go
@@ -1,10 +1,18 @@
 package dto
 
-import "mime/multipart"
+import (
+	"goparking/domains/io_history/model"
+	"mime/multipart"
+)
 
 type CreateIoHistoryRequest struct {
-	Type    string                `form:"type" validate:"required"`
-	CardId  string                `form:"card_id" validate:"required"`
-	Image   *multipart.FileHeader `form:"image" validate:"required"`
-	CropUrl *string               `form:"crop_url"`
+	Type  string                `form:"type" validate:"required"`
+	Rfid  string                `form:"rfid" validate:"required"`
+	Image *multipart.FileHeader `form:"image" validate:"required"`
+}
+
+type ExitResponse struct {
+	DataIn   *model.IOHistory `json:"data_in"`
+	DataOut  *model.IOHistory `json:"data_out"`
+	DataCard *model.Card      `json:"data_card"`
 }
